--- a/index.html
+++ b/index.html
@@ -1,21 +1,15 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
-</head>
-<body>
-    <h1>Lavanya's Portfolio</h1>
-    <h3>I'm a Web developer</h3>
-    <hr />
-    <h3><a href="../2.4 Movie Ranking Project/index.html">Movie-Ranking</a></h3>
-    <img src="./assets/images/Movie_ranking.png" height="200" alt="Movie-Ranking" />
-    <h3><a href="../3.4 Birthday Invite Project/index.html">Birthday Invite</a></h3>
-    <img src="./assets/images/Birthday.png" height="200"    alt="Birthday" />
-    <hr />
-    <a href="./public/about.html">About</a>
-    <a href="./public/contact.html">Contact Me</a>
-</body>
-</html>
+<!-- Write your code below -->
+ <h1>The Best movies according to Lavanya</h1>
+
+ <h2>My top 3 movies of all-time.</h2>
+
+ <hr />
+
+ <h3>Fidaa</h3>
+ <p>One of my all time favorite movie.Watched a many of times.</p>
+
+ <h3>Premalu</h3>
+ <p>I like this movie.Comedy is good.</p>
+ 
+ <h3>Godavari</h3>
+ <p>favorite movie.Watched many of times.</p>
