--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Lavanya's Portfolio</h1>
     <h3>I'm a Web developer</h3>
     <hr />
-    <h3><a href="../2.4 Movie Ranking Project/index.html">Movie-Ranking</a></h3>
+    <h3><a href="./public/movie-ranking.html">Movie-Ranking</a></h3>
     <img src="./assets/images/Movie_ranking.png" height="200" alt="Movie-Ranking" />
     <h3><a href="../3.4 Birthday Invite Project/index.html">Birthday Invite</a></h3>
     <img src="./assets/images/Birthday.png" height="200"    alt="Birthday" />
