--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <hr />
     <h3><a href="./public/movie-ranking.html">Movie-Ranking</a></h3>
     <img src="./assets/images/Movie_ranking.png" height="200" alt="Movie-Ranking" />
-    <h3><a href="../3.4 Birthday Invite Project/index.html">Birthday Invite</a></h3>
+    <h3><a href="../public/birthday-invite.html">Birthday Invite</a></h3>
     <img src="./assets/images/Birthday.png" height="200"    alt="Birthday" />
     <hr />
     <a href="./public/about.html">About</a>
